@@ -1,3 +1,8 @@
+2004-09-14  Dom Lachowicz <cinamod@hotmail.com>
+
+	* io-svg.c: Only emit prepared() once, add more mime-types and
+	file extensions, and (optionally) simulate progressive loading
+	
 2004-09-10  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg.[ch]: rsvg_init(), rsvg_term(). Cuts down on libxml2 memory leaks
